# VideoSync

./: .gitignore  README.md  index.html  index.php  videos.php  videosync.html
VideoSync/: CMakeLists.txt  Main.qml  filehelper.cpp  filehelper.h  main.cpp  qtquickcontrols2.conf  resources.qrc  syncmanager.cpp  syncmanager.h
VideoSync/android/: AndroidManifest.xml
VideoSync/ios/: Info.plist  LaunchScreen.storyboard  VideoSync.entitlements
